feat(ui): frontend auth, connect profile pages with backend
* feat(api): add redirect to client on login success, annotate existing auth endpoints

* feat(ui): implement login with google

* feat(api, ui): getStaticProps and getStaticPaths for profiles

* feat(app): connect auth to frontend, simple useUser hook
