# packages/api/src/modules/auth/auth.controller.ts
@@ -1,13 +1,22 @@
-import { Controller, Get, Req, UseGuards } from '@nestjs/common'
+import { Controller, Get, HttpStatus, Req, UseGuards } from '@nestjs/common'
+import { ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger'
 
 import { RequestWithUser } from '../../types'
+import { GetCurrentUserDto } from './dto/get-current-user'
 import { JwtAuthGuard } from './jwt/jwt-auth.guard'
 
+@ApiTags('auth')
 @Controller('auth')
 export class AuthController {
+  @ApiOperation({ summary: 'Gets the current authenticated user' })
+  @ApiResponse({
+    status: HttpStatus.OK,
+    type: GetCurrentUserDto,
+    description: 'Gets the current authenticated user',
+  })
   @Get('user')
   @UseGuards(JwtAuthGuard)
-  async testGetUser(@Req() req: RequestWithUser) {
-    return { id: req.user.id }
+  async getCurrentUser(@Req() req: RequestWithUser) {
+    return { user: req.user }
   }
 }
