# packages/api/src/modules/auth/dto/get-current-user.ts
@@ -1,0 +1,5 @@
+import { JwtPayload } from '../jwt/jwt-auth.strategy'
+
+export class GetCurrentUserDto {
+  user: JwtPayload
+}
