# packages/api/src/modules/profile/profile.controller.ts
@@ -14,6 +14,7 @@ import { ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger'
 import { RequestWithUser } from '../../types'
 import { CreateProfileDto } from './dto/create-profile.dto'
 import { GetProfileDto } from './dto/get-profile.dto'
+import { GetUsernamesDto } from './dto/get-usernames.dto'
 import { UpdateProfileDto } from './dto/update-profile.dto'
 import { ProfileService } from './profile.service'
 
@@ -25,7 +26,7 @@ export class ProfileController {
   @ApiOperation({ summary: 'Creates a profile' })
   @ApiResponse({
     status: HttpStatus.CREATED,
-    type: CreateProfileDto,
+    type: GetProfileDto,
     description: 'A profile was created',
   })
   @Post()
@@ -36,10 +37,34 @@ export class ProfileController {
     return this.profileService.create(req.user.id, createProfileDto)
   }
 
-  @ApiOperation({ summary: 'Gets a profile' })
+  @ApiOperation({ summary: 'Gets all usernames' })
   @ApiResponse({
     status: HttpStatus.OK,
     type: CreateProfileDto,
+    description: 'Gets all usernames',
+  })
+  @Get('/usernames')
+  async getAllUsernames(): Promise<GetUsernamesDto> {
+    return this.profileService.getAllUsernames()
+  }
+
+  @ApiOperation({ summary: 'Gets a profile by username' })
+  @ApiResponse({
+    status: HttpStatus.OK,
+    type: GetProfileDto,
+    description: 'A profile was retrieved',
+  })
+  @Get('/usernames/:username')
+  async findOneByUsername(
+    @Param('username') username: string,
+  ): Promise<GetProfileDto> {
+    return this.profileService.findOneByUsername(username)
+  }
+
+  @ApiOperation({ summary: 'Gets a profile' })
+  @ApiResponse({
+    status: HttpStatus.OK,
+    type: GetProfileDto,
     description: 'A profile was retrieved',
   })
   @Get(':id')
@@ -50,7 +75,7 @@ export class ProfileController {
   @ApiOperation({ summary: 'Updates a profile' })
   @ApiResponse({
     status: HttpStatus.OK,
-    type: undefined,
+    type: GetProfileDto,
     description: 'A profile was updated',
   })
   @Patch(':id')
@@ -65,7 +90,7 @@ export class ProfileController {
   @ApiOperation({ summary: 'Deletes a profile' })
   @ApiResponse({
     status: HttpStatus.OK,
-    type: undefined,
+    type: GetProfileDto,
     description: 'A profile was deleted',
   })
   @Delete(':id')
